@@ -31,3 +31,4 @@ Steven Maguire @stevenmaguire <stevenmaguire@gmail.com>
 Tom Rochette @tomzx <tom@tomrochette.com>
 Roland Szabo @rolisz <rolisz@gmail.com>
 Theo Mathieu @Mokto
+Daniel Pieper @danielpieper <monica@daniel-pieper.com>
